# scrapping

./: .gitignore  .replit  DISCORD_SETUP_AR.md  INSTRUCTIONS_AR.md  README.md  bot.py  config.example.py  config.py  dashboard.py  database.py  main.py  pyproject.toml  replit.md  scraper.py  scraper_backup.py  social_media_bot.db
attached_assets/: Pasted-Project-Name-Discord-Bot-with-Social-Media-Scraper-Live-Status-Dashboard-Goal-Create-a-Python-b-1753131838554_1753131838556.txt
static/: script.js  style.css
templates/: dashboard.html
